--- a/player.html
+++ b/player.html
@@ -14,7 +14,7 @@
 
 
    <div class="player-album-art">
-   <img src="images/currents.jpg" alt="Currents Album Cover"/> </div>
+   <img src="currents.jpg" alt="Currents Album Cover"/> </div>
    <div class="player-song-info">
       <!--Shows the user the song name, album name, and artist name -->
       <div id="player-song-name">
