--- a/songs.html
+++ b/songs.html
@@ -16,7 +16,7 @@
                     	</div>
                     </div>
                     <div class="songs-album-art">
-                    	<img src="./images/currents.jpg">
+                    	<img src="currents.jpg">
                     	<!-- The image of the selected album -->
                     </div>
                     <div class="songs-info-wrapper">
