--- a/albums.html
+++ b/albums.html
@@ -13,7 +13,7 @@
                 <div class="albums-album-art">
                   <!-- Displays the image of the associated album -->
                   <a href="songs.html">
-                  <img src="./images/cbook.jpg"> 
+                  <img src="cbook.jpg"> 
                 </a>
               </div>
                 <div class="albums-album-name">
@@ -27,7 +27,7 @@
                 <div class="albums-album-wrapper">
               <div class="albums-album-art">
                 <a href="songs.html">
-                <img src="./images/crybaby.jpg"> 
+                <img src="crybaby.jpg"> 
               </a> </div>
                  <div class="albums-album-name">
                   <b> Crybaby </b> 
@@ -37,7 +37,7 @@
                   <div class="albums-album-wrapper">
                   <div class="albums-album-art">
                     <a href="songs.html">
-                <img src="./images/currents.jpg"> </a> </div>
+                <img src="currents.jpg"> </a> </div>
                  <div class="albums-album-name">
                  <b> Currents </b> 
                 </div>
@@ -46,7 +46,7 @@
                   <div class="albums-album-wrapper">
                   <div class="albums-album-art">
                     <a href="songs.html">
-                <img src="./images/telefone.jpeg"> </a> </div>
+                <img src="telefone.jpeg"> </a> </div>
                  <div class="albums-album-name">
                  <b> Telefone </b> 
                 </div>
