Updated Personal Webstie

--- a/Personal Website/main.html
+++ b/Personal Website/main.html
@@ -11,14 +11,23 @@
 		</section>	
 		<img src="IMG_6511.jpeg" alt="Me!"" style="width:15%;height:15%;border-style: ridge;border-color: white;" >
 		<section>
-			<p>
+			<p class = "page summary">
 				<ul>
-					<li> About me </li>
+					<p class = p1> About Me </p>
 					<li> 20, from NYC </li>
 					<li> Northwestern 2020</li>
 					<li> Major in Computer Science</li>
 					<li> Minor in English Literature</li>
 				</ul>
+				<ul>
+				<p class = p1> Where to find me </p>
+
+				</ul>
+			</p>
+		</section>
+		<section>
+			<p class = "page bulk">
+				Howdy!
 			</p>
 		</section>
 	</body>
