Did things, links not working

--- a/Personal Website/main.html
+++ b/Personal Website/main.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<section>
-			<h1> Jack Warshaw</h1>
+			<h1 style ="margin-left:25px; font-size: 30px; font-style: oblique;"> Jack Warshaw</h1>
 		</section>	
 		<img src="IMG_6511.jpeg" alt="Me!"" style="width:15%;height:15%;border-style: ridge;border-color: white;" >
 		<section>
@@ -20,8 +20,9 @@
 					<li> Minor in English Literature</li>
 				</ul>
 				<ul>
-				<p class = p1> Where to find me </p>
-
+					<p class = p1> Where to find me </p>
+					<li> <a href="https://www.linkedin.com/in/jack-warshaw-00289b126/">LinkedIn</a></li>
+					<li> <a href="https://github.com/JackWarshaw/personal-work">Github</a></li>
 				</ul>
 			</p>
 		</section>
