Fixed test issue

--- a/Personal Website/main.html
+++ b/Personal Website/main.html
@@ -7,11 +7,11 @@
 	</head>
 	<body>
 		<section>
-			<h1 style ="margin-left:25px; font-size: 30px; font-style: oblique;"> Jack Warshaw</h1>
+			<h1 style ="margin-bottom: 25px; margin-left:25px; font-size: 30px; font-style: oblique;"> Jack Warshaw</h1>
 		</section>	
-		<img src="IMG_6511.jpeg" alt="Me!"" style="width:15%;height:15%;border-style: ridge;border-color: white;" >
 		<section>
-			<p class = "page summary">
+			<div class = "page summary">
+				<img src="IMG_6511.jpeg" alt="Me!"" style="width:25%;height:25%;border-style: ridge;border-color: white; margin-top: 50px; margin-left: 20px" >
 				<ul>
 					<p class = p1> About Me </p>
 					<li> 20, from NYC </li>
@@ -23,8 +23,9 @@
 					<p class = p1> Where to find me </p>
 					<li> <a href="https://www.linkedin.com/in/jack-warshaw-00289b126/">LinkedIn</a></li>
 					<li> <a href="https://github.com/JackWarshaw/personal-work">Github</a></li>
+					<li> </li>
 				</ul>
-			</p>
+			</div>
 		</section>
 		<section>
 			<p class = "page bulk">
