Fixed styling, added headers, and added relative positioning

--- a/Personal Website/main.html
+++ b/Personal Website/main.html
@@ -7,11 +7,11 @@
 	</head>
 	<body>
 		<section>
-			<h1 style ="margin-bottom: 25px; margin-left:25px; font-size: 30px; font-style: oblique;"> Jack Warshaw</h1>
+			<h1 style ="position: fixed; margin-bottom: 25px; margin-left:25px; font-size: 30px; font-style: oblique; color: #373F51; text-shadow: 1px 1px #58A4B0"> Jack Warshaw</h1>
 		</section>	
 		<section>
 			<div class = "page summary">
-				<img src="IMG_6511.jpeg" alt="Me!"" style="width:25%;height:25%;border-style: ridge;border-color: white; margin-top: 50px; margin-left: 20px" >
+				<img src="IMG_6511.jpeg" alt="Me!"" style="width:175px;height:175px%;border-style: ridge;border-color: white; margin-top: 50px; margin-left: 20px" >
 				<ul>
 					<p class = p1> About Me </p>
 					<li> 20, from NYC </li>
@@ -23,13 +23,17 @@
 					<p class = p1> Where to find me </p>
 					<li> <a href="https://www.linkedin.com/in/jack-warshaw-00289b126/">LinkedIn</a></li>
 					<li> <a href="https://github.com/JackWarshaw/personal-work">Github</a></li>
-					<li> </li>
 				</ul>
 			</div>
 		</section>
 		<section>
 			<p class = "page bulk">
-				Howdy!
+				<p class= "page bulk h2"> More About Me </p>
+				<p class = "page bulk text"> Filler </p>
+				<p class= "page bulk h2"> Projects </p>
+				<p class = "page bulk text"> Filler </p>
+				<p class= "page bulk h2"> Work Experience </p>
+				<p class = "page bulk text"> Filler </p>
 			</p>
 		</section>
 	</body>
